[gd_scene load_steps=4 format=3 uid="uid://xevie83l8kj0"]

[ext_resource type="Theme" uid="uid://dq5nu7prcuvhu" path="res://Components/TimeTrackingPanel/Theme/TabButtonDark.tres" id="1_7a7o1"]
[ext_resource type="Script" path="res://Components/TimeTrackingPanel/TimeTrackingPanel.gd" id="1_lw4wm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1kmmi"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="TimeTrackingPanel" type="Panel"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 245.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1kmmi")
script = ExtResource("1_lw4wm")

[node name="TabContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabHead" type="HBoxContainer" parent="TabContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="NormalTabButton" type="Button" parent="TabContainer/TabHead"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_7a7o1")
theme_type_variation = &"TabButtonActive"
text = "Normal"
clip_text = true

[node name="PomodoroTabButton" type="Button" parent="TabContainer/TabHead"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_7a7o1")
theme_type_variation = &"TabButton"
text = "Pomodoro"
clip_text = true

[node name="TabBody" type="CenterContainer" parent="TabContainer"]
layout_mode = 2
size_flags_vertical = 3
